--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-fieldset": "^3.1.6",
     "react-google-login": "^5.1.21",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
   },
   "scripts": {
